objects/ORDER_Change_REQUESTS__c.object
<CustomObject>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <label>Created By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CREATION_DATE__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Requested_Date_New__c</fullName>
        <description>Current Requested Date New takes value from New Requested Delivery Date.</description>
        <label>Beginning CRD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Requested_Date__c</fullName>
        <formula>Look_up_order__r.REQUESTED_DELIVERY_DATE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Requested Date old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HEADER_ID__c</fullName>
        <label>Header ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATED_BY__c</fullName>
        <label>Last Updated By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATE_DATE__c</fullName>
        <label>Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LINE_ID__c</fullName>
        <label>Line ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LINE_NUMBER__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Look_up_order__c</fullName>
        <label>Look up order</label>
        <referenceTo>oe_order_headers__c</referenceTo>
        <relationshipLabel>Order Change</relationshipLabel>
        <relationshipName>Order_change</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROCESS_FLAG__c</fullName>
        <label>Process Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROCESS_MESSAGE__c</fullName>
        <label>Process Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QUANTITY__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REQUEST_DATE__c</fullName>
        <label>Ending CRD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Change Request Reason</label>
        <picklist>
            <picklistValues>
                <fullName>PUSH OUT: Credit Issues of the Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUSH OUT: Homeowner financing issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUSH OUT: Homeowner Association Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUSH OUT: Homeowner not yet ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUSH OUT: Job site / Roof issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUSH OUT: Order Change / amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUSH OUT: Permit issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUSH OUT: Priorities of installation changed by the Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUSH OUT: Project issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUSH OUT: Put on hold by the Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUSH OUT: Waiting for HO signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PULL IN: Settled payment or past due invoice earlier than expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PULL IN: Resolved Financing issues earlier than expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PULL IN: Homeowner availability (will not be available on the original CRD, and is requesting for an earlier installation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PULL IN: Homeowner decided to push out or cancel their vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PULL IN: Job site / Roof issues resolved earlier than expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PULL IN: Permit available earlier than expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INITIAL CRD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_REQUEST_ID__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>SFDC Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFDC_Request_ID1__c</fullName>
        <label>SFDC Request ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Request_ID_Auto__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>SFDC Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFDC_Request_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SHIP_TO_SITE_ID__c</fullName>
        <label>Ship To Site ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOA_ERRORMSG__c</fullName>
        <label>Soa Error Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOA_FLAG__c</fullName>
        <label>Soa Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Order change</label>
    <listViews>
        <fullName>Delete_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Look_up_order__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Delete View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Counter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order change</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChangeRequestReasonRequired</fullName>
        <active>true</active>
        <description>Please enter change request reason.</description>
        <errorConditionFormula>ISCHANGED(REQUEST_DATE__c)&amp;&amp; ISPICKVAL(Reason_for_Change__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Reason_for_Change__c</errorDisplayField>
        <errorMessage>Please enter a value on Reason for change field before you SUBMIT.</errorMessage>
    </validationRules>
</CustomObject>